--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/13082.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yoga and Reliefs</title>
+    <title>Harmony Haven</title>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
